# clean_fastapi_architecture

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
src/: api.py  exceptions.py  logging.py  main.py
src/auth/: controller.py  models.py  service.py
src/database/: core.py
src/entities/: todo.py  user.py
src/todos/: controller.py  models.py  service.py
src/users/: models.py  service.py
